--- a/biodiversity_project.ipynb
+++ b/biodiversity_project.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "4  Githopsis specularioides  Great Smoky Mountains National Park            85"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 281,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "4                                      Wapiti Or Elk                 NaN  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 282,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "[557 rows x 4 columns]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 283,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
        "[530 rows x 4 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 285,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
        "[265 rows x 4 columns]"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,7 @@
        "4514              Eurasian Collared Dove, Collared-Dove                 NaN  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
        "[5541 rows x 4 columns]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 290,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
@@ -1131,7 +1131,7 @@
        "3312429"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 291,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
@@ -1307,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1317,7 @@
        "       'Bryce National Park', 'Yellowstone National Park'], dtype=object)"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 297,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
@@ -1372,7 +1372,7 @@
        "F_onewayResult(statistic=75014.12663046071, pvalue=0.0)"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [
     {
@@ -1454,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [
     {
@@ -1493,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [
     {
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1543,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -1584,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
@@ -1623,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1632,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
@@ -1775,7 +1775,7 @@
        "[176 rows x 4 columns]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 307,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1787,7 +1787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1803,36 +1803,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Bat                               4\n",
-       "Least Chipmunk                    2\n",
-       "American Mink                     2\n",
+       "Marsh Rice Rat                    2\n",
+       "Northern Flying Squirrel          2\n",
        "Bison                             2\n",
-       "Aurochs                           2\n",
-       "Ermine                            2\n",
-       "Spotted Bat                       2\n",
-       "Fringed Myotis                    2\n",
-       "Uinta Chipmunk                    2\n",
+       "Mountain Lion                     2\n",
+       "Long-Legged Myotis                2\n",
        "Muskrat                           2\n",
-       "Mountain Goat                     2\n",
-       "Fisher                            2\n",
-       "Long-Eared Myotis                 2\n",
-       "Myotis                            2\n",
-       "Big-Eared Woodrat                 2\n",
-       "Golden-Mantled Ground Squirrel    2\n",
-       "Grizzly Bear                      2\n",
        "Bighorn Sheep                     2\n",
+       "Red Fox                           2\n",
+       "Yuma Myotis                       2\n",
+       "Grizzly Bear                      2\n",
+       "Mountain Goat                     2\n",
        "Mule Deer                         2\n",
-       "River Otter                       2\n",
+       "Golden-Mantled Ground Squirrel    2\n",
+       "Fisher                            2\n",
+       "Uinta Chipmunk                    2\n",
+       "American Mink                     2\n",
+       "Big-Eared Woodrat                 2\n",
+       "Myotis                            2\n",
+       "Pallid Bat                        2\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 309,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1844,14 +1844,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-131-29c2506e9033>:1: SettingWithCopyWarning: \n",
+      "<ipython-input-310-29c2506e9033>:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1867,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
@@ -1928,7 +1928,7 @@
        "3               Yosemite National Park          3311"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 311,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1946,7 +1946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1969,7 +1969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1981,7 +1981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
@@ -2084,7 +2084,7 @@
        "Amphibian                             4           1           2            0"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 314,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2099,7 +2099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -2139,7 +2139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [
     {
@@ -2243,7 +2243,7 @@
        "6            1.079305  "
       ]
      },
-     "execution_count": 137,
+     "execution_count": 316,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2266,7 +2266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [
     {
@@ -2292,7 +2292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2304,7 +2304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
@@ -2389,7 +2389,7 @@
        "Vascular Plant      4216     46"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 319,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2404,7 +2404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
